@@ -244,8 +244,7 @@ var Sao = {};
     Sao.config = {};
     Sao.config.limit = 1000;
     Sao.config.display_size = 20;
-    Sao.config.roundup = {};
-    Sao.config.roundup.url = 'http://bugs.tryton.org/roundup/';
+    Sao.config.bug_url = 'https://bugs.tryton.org/';
     Sao.config.title = 'Tryton';
     Sao.config.icon_color = '#3465a4';
     Sao.config.bus_timeout = 10 * 60 * 1000;
